package problems