@@ -41,12 +41,12 @@ public class CollectionMaker {
      * */
     //正确的将数组转换为ArrayList --> 使用new ArrayList<>包一层
     public static void ConvertArrayList2List(){
-        //List<String> list = new ArrayList<>(Arrays.asList("apple","banana","strawberry"));
-        List<String> list = new ArrayList<>(List.of("apple","banana","strawberry"));
-        //String[] res = list.toArray(new String[list.size()]); //将list转换为String数组
-        list.add("watermelon");
-        //list.remove(0);
-        list.forEach(System.out :: println);
+        List<String> list = new ArrayList<>(Arrays.asList("apple","banana","strawberry"));
+        //List<String> list = new ArrayList<>(List.of("apple","banana","strawberry"));
+        String[] res = list.toArray(new String[list.size()]); //将list转换为String数组
+        //list.add("watermelon");
+        ////list.remove(0);
+        //list.forEach(System.out :: println);
     }
 
     //移除数组元素不能用foreach，应利用集合的迭代器
@@ -109,5 +109,28 @@ public class CollectionMaker {
         System.out.println("Arrays.binarySearch(e, 'c')：");
         int s = Arrays.binarySearch(e, 'f');
         System.out.println("字符c在数组的位置：" + s);
+    }
+
+    private static void sample(){
+        //数组: int[]
+        int[] arrayInt = new int[]{1,2,3,4,5,6};
+
+        //原生数组转包装类数组: int[] 2 Integer[]
+        Integer[] arrayInter = Arrays.stream(arrayInt).boxed().toArray(Integer[]::new);
+
+        //*包装类数组转List/ArrayList: Integer[] 2 List<Integer>
+        List<Integer> listInter = Arrays.asList(arrayInter);
+
+        //*List/ArrayList转包装类数组: List<Integer> 2 Integer[]
+        Integer[] arrayInter2 = listInter.toArray(new Integer[listInter.size()]);
+
+        //包装类数组转原生数组: Integer[] 2 int[]
+        int[] arrayInt2 = Arrays.stream(arrayInter2).mapToInt(Integer::valueOf).toArray();
+
+        //原生数组转List/ArrayList: int[] 2 List<Integer>
+        List<Integer> listInter2 = Arrays.stream(arrayInt2).boxed().collect(Collectors.toList());
+
+        //List/ArrayList转原生数组： List<Integer> 2 int[]
+        int[] arrayInt3 = listInter2.stream().mapToInt(Integer::valueOf).toArray();
     }
 }
